src/objects/JBCXM__CustomerInfo__c.object
<CustomObject>
    <description>Primary object that links Customers in the JBara repository with the records in Salesforce.com&apos;s Account object. For the JBara Customers who are using Salesforce.com as their CRM software, Customers will represent Accounts that have been converted into Customers with a new business transaction.</description>
    <fields>
        <fullName>Cloud_Opportunity_Type__c</fullName>
        <label>Cloud Opportunity Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Cloud Only</fullName>
                </value>
                <value>
                    <fullName>On-Prem Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ASV__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Annual Subscription Value of the customer.</description>
        <inlineHelpText>Annual Subscription Value of the Customer.</inlineHelpText>
        <label>ASV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <description>This relation links Customer to Accounts</description>
        <inlineHelpText>Select Account (in CRM) that you want to associate with the Customer record.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers Info</relationshipLabel>
        <relationshipName>CustomersInfo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__ActiveAlertCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Alert Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Churn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to transaction to get the Churn information.</description>
        <inlineHelpText>Look up to transaction to get the Churn information.</inlineHelpText>
        <label>Churn</label>
        <referenceTo>JBCXM__TransHeader__c</referenceTo>
        <relationshipLabel>Customers Info</relationshipLabel>
        <relationshipName>Customers_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Comments__c</fullName>
        <inlineHelpText>Enter any optional commentary related to the Customer. Max allowed length 4096 characters.</inlineHelpText>
        <label>Comments</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CurScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Score</label>
        <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
        <relationshipLabel>Customers Info</relationshipLabel>
        <relationshipName>CurrentCustScoreId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerLifetimeInMonths__c</fullName>
        <description>This field return the lifetime of a customer - If a Customer Churns and the Churn lookup field is loaded, then the customers Lifetime is calculated based on the Churn. For Active customers it is calculated till the current data.</description>
        <formula>IF( 
JBCXM__Churn__c == null, 
((Year(  TODAY() ) * 12 + Month( TODAY() ))-(Year( JBCXM__OriginalContractDate__c ) * 12 + Month(JBCXM__OriginalContractDate__c))) , 
((Year(JBCXM__Churn__r.JBCXM__Date__c) * 12 + Month( JBCXM__Churn__r.JBCXM__Date__c))-(Year( JBCXM__OriginalContractDate__c ) * 12 + Month(JBCXM__OriginalContractDate__c)))
)</formula>
        <inlineHelpText>This is a formula field that calculates the lifetime of a customer in Months.</inlineHelpText>
        <label>Customer Lifetime in Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerName__c</fullName>
        <description>Customer name is same as the associated Account name</description>
        <formula>JBCXM__Account__r.Name</formula>
        <inlineHelpText>Customer name auto populated from the associated Account&apos;s name</inlineHelpText>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Goals__c</fullName>
        <label>Goals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JBCXM__Industry__c</fullName>
        <description>Customer&apos;s industry is same as the associated Account&apos;s industry.</description>
        <formula>TEXT(JBCXM__Account__r.Industry)</formula>
        <inlineHelpText>Customer Industry auto populated from the associated Account&apos;s industry.</inlineHelpText>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__InstanceList__c</fullName>
        <label>Instance List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__LifeCycleInYear__c</fullName>
        <formula>IF(JBCXM__OriginalContractDate__c&lt;TODAY(),ABS(FLOOR((TODAY() - JBCXM__OriginalContractDate__c)/365)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life cycle in year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__LifeCycleWeeksPerYear__c</fullName>
        <formula>IF(JBCXM__OriginalContractDate__c&lt;TODAY(),ABS(CEILING(((TODAY() - JBCXM__OriginalContractDate__c) - JBCXM__LifeCycleInYear__c*365)/7)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life cycle weeks per year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__LifecycleInWeeks__c</fullName>
        <formula>IF(JBCXM__OriginalContractDate__c&lt;TODAY(),ABS(CEILING((JBCXM__OriginalContractDate__c - TODAY())/7)) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifecycle In Weeks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__MRR__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Current Monthly Recurring Revenue (MRR) of the Customer, net of all transactions to-date.</description>
        <inlineHelpText>Current Monthly Recurring Revenue (MRR) of the Customer, net of all transactions to-date.</inlineHelpText>
        <label>MRR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPS__c</fullName>
        <label>Latest NPS Score</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__NextRenewalDate__c</fullName>
        <description>Next Renewal Date of the customer.</description>
        <inlineHelpText>Next Renewal Date of the Customer, auto populated based on the first transaction (New Business) and subsequent renewals.</inlineHelpText>
        <label>RenewalDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__OneTimeRevenue__c</fullName>
        <description>Aggregated amount of all One-time (non recurring) revenues from the Customer, calculated based on all transactions to-date.</description>
        <inlineHelpText>Aggregated amount of all One-time (non recurring) revenues from the Customer, calculated based on all transactions to-date.</inlineHelpText>
        <label>OneTime</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__OriginalContractDate__c</fullName>
        <description>Original Contract Date of the customer</description>
        <inlineHelpText>Customer acquisition date based on the first transaction (New Business).</inlineHelpText>
        <label>OCD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__OriginalContractNumber__c</fullName>
        <description>Original Contract Number of the customer.</description>
        <inlineHelpText>Optional reference # of the first transaction (New Business) with the customer.</inlineHelpText>
        <label>Original Contract Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__PrevScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Score</label>
        <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
        <relationshipLabel>Customers Info (Previous Score Id)</relationshipLabel>
        <relationshipName>PreviousCustScoringId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RevenueBand__c</fullName>
        <description>To store the Revenue Band to the customer</description>
        <label>RevenueBand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ScorecardComment__c</fullName>
        <label>Scorecard Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field describes the stage of the customer</description>
        <inlineHelpText>Customer Stage is a configurable attribute that provides additional information on the customer journey / status.</inlineHelpText>
        <label>Stage</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>JBCXM__PickList__c.JBCXM__Category__c</field>
                <operation>equals</operation>
                <value>Customer Stage</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Customers Info (Customer Stage)</relationshipLabel>
        <relationshipName>Customers_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field describes if the customer is Active or Inactive</description>
        <inlineHelpText>Select the Customer Status, which is defaulted to Active. When the customer churns, the status is set to Churn. Select the status as inactive when the customer is not using the product, but has not officially churned.</inlineHelpText>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>JBCXM__PickList__c.JBCXM__Category__c</field>
                <operation>equals</operation>
                <value>Customer Status</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Customer Status</relationshipLabel>
        <relationshipName>CustomersInfoStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Tag__c</fullName>
        <label>Tag</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Churned</fullName>
                </value>
                <value>
                    <fullName>Established</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Up-sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__TrendIndicator__c</fullName>
        <label>Trend Indicator</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__UltimateParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers Info (Ultimate Parent)</relationshipLabel>
        <relationshipName>UltimateParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Users__c</fullName>
        <description>Number of licensed users of the customer.</description>
        <inlineHelpText>Number of user licenses purchased by the customer. This number is aggregated from all customer transactions to-date.</inlineHelpText>
        <label>Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bugs__c</fullName>
        <label>Total Bugs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ERs__c</fullName>
        <label>Total ERs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tickets__c</fullName>
        <label>Total Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Info</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JB{000000}</displayFormat>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>